# clean-architecture-rust

./: .gitignore  README.md
.docker/: docker-compose.yml
.docker/mysql/: Dockerfile
.docker/nginx/: Dockerfile
.docker/rust/: Dockerfile
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/domain/: mod.rs  user_profiles.rs  users.rs
app/src/infrastructure/: db.rs  mod.rs  routing.rs
app/src/interface/controllers/product/: users_controller.rs
app/src/interface/gateways/: mod.rs
app/src/usecase/: mod.rs
app/src/usecase/product/: mod.rs  user_interactor.rs
mysql/config/: .env_sample  my.conf
mysql/sql/: 01_init_db.sql
nginx/: default.conf
