[package]
name = "clean-architecture-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["mysql"] }
rocket = "0.4.11"
# rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.91", default-features = false, features = ["alloc"] }

mysqlclient-sys = "0.2.5"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[patch.crates-io]
mysqlclient-sys = { git = "https://github.com/pzmarzly/mysqlclient-sys", rev = "acd1b2b" }
